# AppScan-Custom-Dashboard

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  README.md
backend/: .coverage  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/core/config/: settings.py
backend/app/core/security/: auth.py  authorization.py  dependencies.py  policy.py
backend/app/integrations/appscan_api/: client.py
backend/app/integrations/appscan_mcp/: client.py
backend/app/plugins/: widget_registry.py
backend/app/repositories/: data_source_store.py  postgres_store.py
backend/app/schemas/: common.py
backend/app/services/: asoc_read_service.py  data_source_service.py  issue_count_service.py  mock_data.py  multi_endpoint.py  report_artifacts.py
backend/app/workers/: analytics_prewarm.py  report_scheduler.py  schedule_utils.py
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 0001_initial_sqlite_schema.py  0002_schedule_retry_and_report_artifacts.py  0003_analytics_snapshots_cache.py  0004_data_sources.py
backend/tests/: conftest.py
backend/tests/unit/: test_analytics_prewarm.py  test_asoc_client_login.py  test_asoc_read_service.py  test_auth.py  test_authorization.py  test_data_source_service.py  test_dependencies.py  test_multi_endpoint.py  test_policy.py  test_postgres_store.py  test_read_only_policy.py  test_report_artifacts.py  test_report_scheduler.py  test_schedule_utils.py  test_settings.py
backend/tests/unit/routes/: __init__.py  test_analytics_data_source_filter.py  test_analytics_routes.py  test_applications_routes.py  test_asset_groups_routes.py  test_audit_routes.py  test_auth_routes.py  test_scans_routes.py  (+4 more)
(+433 files in other folders)
