[project]
name = "appscan-aspm-backend"
version = "1.5.0"
description = "AppScan ASPM Dashboard backend — supports ASoC and AppScan 360"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "httpx>=0.28.0",
  "psycopg>=3.2.0; platform_system == 'Windows' and (platform_machine == 'ARM64' or platform_machine == 'arm64' or platform_machine == 'aarch64')",
  "psycopg[binary]>=3.2.0; platform_system != 'Windows' or (platform_machine != 'ARM64' and platform_machine != 'arm64' and platform_machine != 'aarch64')",
  "sqlalchemy>=2.0.36",
  "pydantic-settings>=2.10.0",
  "python-jose[cryptography]>=3.4.0",
  "passlib[bcrypt]>=1.7.4",
  "croniter>=3.0.3",
]

[project.optional-dependencies]
dev = [
  "alembic>=1.14.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-mock>=3.14.0",
  "pytest-cov>=5.0.0",
  "respx>=0.21.0",
  "freezegun>=1.5.0",
  "ruff>=0.6.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: fast unit tests with no I/O",
    "slow: tests that may take >1s",
]

[tool.coverage.run]
source = ["app"]
omit = ["app/services/mock_data.py", "migrations/*"]

[tool.coverage.report]
fail_under = 60  # Unit tests only; integration tests needed for asoc_read_service.py and analytics.py to reach 80%
show_missing = true
